ops-test-1/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-app
  labels:
    app: sre
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sre
  template:
    metadata:
      labels:
        app: sre
    spec:
      containers:
      - name: sre-app
        image: sre-app:latest1
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
          timeoutSeconds: 2
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 2
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
